@startuml
!theme mars

class User
{
    + Guid Id
    + string FirstName
    + string MiddleName
    + string LastName
    + string FullName
    + UserAssociation[] Associations
}

User <|- Student
class Student
{
    + StudentGroup Group
}

User <|- Mentor
class Mentor 
{

}

class StudentGroup
{
    + Guid Id
    + string Name
    + Student[] Students
}

class Assignment
{
    + Guid Id
    + string Title
    + Points MinPoints
    + Points MaxPoints
    + GroupAssignment[] GroupAssignments
    + DeadlinePolicy[] DeadlinePolicies
}

class Submission
{
    + Guid Id
    + Student Student
    + Assignment Assignment
    + string Payload
    + Points Points
    + Points ExtraPoints
    + DateTime SumbissionDateTime
}

class GroupAssignment
{
    + StudentGroup Group
    + Assignment Assignment
    + DateOnly Deadline
}

class SubjectCourse
{
    + Guid Id
    + Subject Subject
    + Mentor Lector
    + SubjectCourseGroup[] Groups
    + Assignment[] Assignments
    + SubjectCourseAssociation[] Associations
}

class SubjectCourseGroup
{
    + SubjectCourse SubjectCourse
    + StudentGroup StudentGroup
    + Mentor[] PracticeMentors
}

class Subject 
{
    + Guid Id
    + string Title
    + SubjectCourse[] Courses
}

abstract class DeadlinePolicy
{
    + Guid Id
    + TimeSpan SpanBeforeActivation
    --
    Points Apply(Points)
}

DeadlinePolicy <|-- AbsoluteDeadlinePolicy
class AbsoluteDeadlinePolicy
{
    + Points AbsoluteValue
}

DeadlinePolicy <|-- CappingDeadlinePolicy
class CappingDeadlinePolicy
{
    + double Cap
}

DeadlinePolicy <|-- FractionalDeadlinePolicy
class FractionalDeadlinePolicy
{
    + Fraction Fraction
}

abstract class UserAssociation
{
    + User User
}

UserAssociation <|-- IsuUserAssociation
class IsuUserAssociation
{
    + int UniversityId
}

UserAssociation <|-- GithubUserAssociation
class GithubUserAssociation
{
    + string GithubUsername
}

abstract class SubjectCourseAssociation
{
    + SubjectCourse SubjectCourse
}

SubjectCourseAssociation <|-right- GithubSubjectCourseAssociation
class GithubSubjectCourseAssociation
{
    + string GithubOrganizationName
}

User -left-{ UserAssociation

StudentGroup "one" o--{ "many" Student

Assignment "one" o-right-{ "many" DeadlinePolicy 
Assignment "one" o--{ "many" GroupAssignment

GroupAssignment o-left- StudentGroup

Submission "many" }--left--o "one" Student
Submission "many" }-up-o "one" Assignment

SubjectCourse "one" o--{ "many" SubjectCourseGroup
SubjectCourse "many" }-up- "one" Subject
SubjectCourse "one" o--{ "many" Assignment
SubjectCourse "one" o--right--{ "many" SubjectCourseAssociation
SubjectCourse "many" }--left--o "one" Mentor

SubjectCourseGroup "many" }-- "one" StudentGroup
SubjectCourseGroup "many" }--right--{ "many" Mentor

@enduml